src/core/Claroline/CoreBundle/Tests/Stub/plugin/extension/Valid/WithCustomResources/ValidWithCustomResources.php
<?php

namespace Valid\WithCustomResources;

use Claroline\CoreBundle\Library\Plugin\ClarolineExtension;

class ValidWithCustomResources extends ClarolineExtension
{
}